fix (dev): add footer

--- a/property-rental-app/my-app/src/app/pages/componets/home/home.component.css
+++ b/property-rental-app/my-app/src/app/pages/componets/home/home.component.css
@@ -6,10 +6,9 @@
     flex-direction: column;
 }
 
-section {
+#page-1{
     object-fit: cover;
     object-position: top center;
-    color: #fff;
     padding: 40px;
     margin-bottom: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -23,6 +22,12 @@ section {
     height: 50vh;
 }
 
+#page-2{
+    padding: 40px;
+    margin-bottom: 40px;
+    height: 60vh;
+
+}
 
 section h1 {
     font-weight: bold;
