--- a/property-rental-app/my-app/src/app/pages/componets/home/home.component.html
+++ b/property-rental-app/my-app/src/app/pages/componets/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-    <section id="home" class="" style="background-image: url('images/pexels-pixabay-280221.jpg');">
+    <section id="page-1" class="" style="background-image: url('images/pexels-pixabay-280221.jpg');">
         <div class="container">
             <h1>Find your perfect place.</h1>   
             <div class="center">
@@ -7,3 +7,9 @@
               </div>
         </div>
     </section>
+    <section id="page-2">
+        <h1>Explore Rentals in Chicago, IL</h1>   
+    </section>
+</main>
+
+
