--- a/property-rental-app/src/app/page/footer/footer.component.html
+++ b/property-rental-app/src/app/page/footer/footer.component.html
@@ -1,125 +1,28 @@
-<footer class="">
-  <div class="text-white">
-    <div class="pt-10 pl-10 font-bold text-3xl lg:flex justify-center gap-3">
-      <p>Popular</p>
-      <p>seraches</p>
+<footer class="text-center text-lg-start bg-black text-white">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"></section>
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+            <div class="row mt-3">
+                <div *ngFor="let main of mains"  class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <div *ngIf="main.isEnabled" >
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>{{ main.header }}
+                        </h6>
+                        <p>
+                            {{ main.title }}
+                        </p>
+                    </div>
+                </div>
+                <div *ngFor="let section of sections" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 *ngIf="section.isEnabled" class="text-uppercase fw-bold mb-4">{{section.title}}</h6>
+                    <p *ngFor="let sectionname of section.links">
+                        <a *ngIf="sectionname.isEnabled" [routerLink]="sectionname.routerlink" class="text-reset">{{sectionname.name}}</a>
+                    </p>
+                </div>               
+            </div>
+        </div>
+    </section>
+    <div  *ngFor="let main of mains"  class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
+        {{main.footerend}}
     </div>
-
-    <div class="text-blue-500 mt-8 flex flex-col pl-10 lg:flex-row justify-evenly">
-      <div class="mt-4">
-        <ul class="space-y-3">
-          <li class="text-white font-semibold">Rentals near me</li>
-          <li><a href="#">appartments near me</a></li>
-          <li><a href="#">1bedroom appartments near me</a></li>
-          <li><a href="#">houses for rent near me</a></li>
-        </ul>
-      </div>
-
-      <div class="mt-4">
-        <ul class="space-y-3">
-          <li class="text-white font-semibold">
-            <a href="#">Appartments for rent by city</a>
-          </li>
-          <li><a href="#">mumbai appartments</a></li>
-          <li><a href="#">south mumbai appartments</a></li>
-          <li><a href="#">out of mumbai</a></li>
-          <li><a href="#">seaface appartments </a></li>
-        </ul>
-      </div>
-
-      <div class="mt-4">
-        <ul class="space-y-3">
-          <li class="text-white font-semibold">
-            <a href="#">houses for rent by city</a>
-          </li>
-          <li><a href="#">mumbai appartments</a></li>
-          <li><a href="#">south mumbai appartments</a></li>
-          <li><a href="#">out of mumbai</a></li>
-          <li><a href="#">seaface appartments </a></li>
-        </ul>
-      </div>
-
-      <div class="mt-4">
-        <ul class="space-y-3">
-          <li class="text-white font-semibold">
-            <a href="#">houses for rent by city</a>
-          </li>
-          <li><a href="#">mumbai appartments</a></li>
-          <li><a href="#">south mumbai appartments</a></li>
-          <li><a href="#">out of mumbai</a></li>
-          <li><a href="#">seaface appartments </a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="mt-10 lg:mt-40">
-      <hr />
-    </div>
-
-    <div class="flex justify-center mt-12 lg:mt-12 font-semibold">
-      <p class="text-4xl">CityScape Rents</p>
-    </div>
-
-    <div class="flex justify-center mt-12 gap-14 text-center">
-      <ul class="text-blue-500">
-        <li class="text-white">
-          <a href="#">OUR COMPANY <i class="fa-solid fa-caret-down"></i></a>
-        </li>
-        <ul>
-          <li><a href="#">about us</a></li>
-          <li><a href="#">press and media</a></li>
-          <li><a href="#">bloga</a></li>
-          <li><a href="#">rent research</a></li>
-          <li><a href="#"> policy</a></li>
-          <li><a href="#">terms of service</a></li>
-          <li><a href="#">carrer</a></li>
-        </ul>
-      </ul>
-      <ul class="text-blue-500">
-        <li class="text-white">
-          <a href="#">Popular Searches<i class="fa-solid fa-caret-down"></i></a>
-        </li>
-        <ul>
-          <li><a href="#">Apartments for Rent Near Me</a></li>
-          <li><a href="#">Houses for Rent Near Me</a></li>
-          <li><a href="#">1 Bedroom Apartments Near Me</a></li>
-          <li><a href="#">studio appartment near me</a></li>
-          <li><a href="#"> Cheap Houses Near Me</a></li>
-          <li><a href="#">Pet Friendly Apartments Near Me</a></li>
-          <li><a href="#">Luxury Apartments Near Me</a></li>
-        </ul>
-      </ul>
-      <ul class="text-blue-500">
-        <li class="text-white">
-          <a href="#">Let us help<i class="fa-solid fa-caret-down"></i></a>
-        </li>
-        <ul>
-          <li><a href="#">Visit terms</a></li>
-          <li><a href="#">avoid scams</a></li>
-          <li><a href="#">list a property</a></li>
-          <li><a href="#"> bussiess solution</a></li>
-          <li><a href="#"> mumbai appartment site map</a></li>
-          <li><a href="#">rental price estimator</a></li>
-          <li><a href="#">accesibility</a></li>
-          <li><a href="#">New Listings In Mumbai</a></li>
-        </ul>
-      </ul>
-    </div>
-
-    <div class="mt-14 text-center text-xs">
-      <p>
-        © 2024 Rent Group Inc. All rights reserved.
-        <a href="#" class="text-blue-500">Terms of Service </a>and
-        <a href="#" class="text-blue-500">Privacy Policy.</a>
-      </p>
-      <p>
-        If you are using a screen reader, or are having difficulty reading this
-        website, please email
-        <a href="#" class="text-blue-500"> accessibilityfeedback@CityScape.</a>
-      </p>
-    </div>
-
-    <div class="flex justify-center mt-8">
-      <i class="fa-sharp-duotone fa-solid fa-building text-blue-500 text-2xl"></i>
-    </div>
-  </div>
 </footer>
