--- a/property-rental-app/src/app/page/card/card.component.html
+++ b/property-rental-app/src/app/page/card/card.component.html
@@ -1,56 +1,43 @@
-<!-- <section>
-
-    <div class="container-fostrap">
-      <div class="content w-[100vh]">
-          <div class="container ">
-              <div class="row ">
-                  <div class="col-12 col-sm-6 col-md-4">
-                      <div class="card">
-                          <a class="img-card" href="">
-                              <img src="https://1.bp.blogspot.com/-Bii3S69BdjQ/VtdOpIi4aoI/AAAAAAAABlk/F0z23Yr59f0/s640/cover.jpg" alt="" />
-                          </a>
-                          <div class="card-content">
-                              <h4 class="card-title">
-                                  <a href="">Bootstrap 3 Carousel FadeIn Out Effect</a>
-                              </h4>
-                              <p>Tutorial to make a carousel bootstrap by adding more wonderful effect fadein ...</p>
-                          </div>
-                          <div class="card-read-more">
-                              <a href="" class="btn btn-link btn-block">Read More</a>
-                          </div>
-                      </div>
-                  </div>
-   
-              </div>
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-[]">
+  
+      <div class="col w-[37vh]">
+        <div class="card">
+          <div class="card-img-top">
+            <img src="assets/images/regents-park-chicago-il-diningliving-room.jpg" class="card-img-top" alt="">
           </div>
-      </div>
-  </div>
-  </section> -->
-
-
-  <div class="container-fostrap flex justify-center items-center min-h-screen p-4">
-    <div class="content w-full md:w-[100vh]">
-      <div class="container mx-auto">
-        <div class="flex flex-wrap -mx-2">
-          <div class="w-full sm:w-1/2 md:w-1/3 p-2">
-            <div class="card bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-              <a class="img-card block rounded-t-lg overflow-hidden" href="">
-                <img src="https://1.bp.blogspot.com/-Bii3S69BdjQ/VtdOpIi4aoI/AAAAAAAABlk/F0z23Yr59f0/s640/cover.jpg" alt="" class="w-full h-48 object-cover transition-transform duration-300 hover:scale-105" />
-              </a>
-              <div class="card-content p-4">
-                <h4 class="card-title text-xl font-bold mb-2">
-                  <a href="" class="text-black no-underline hover:underline">Bootstrap 3 Carousel FadeIn Out Effect</a>
-                </h4>
-                <p class="text-gray-700">Tutorial to make a carousel bootstrap by adding more wonderful effect fadein ...</p>
-              </div>
-              <div class="card-read-more border-t p-4">
-                <a href="" class="text-blue-600 font-semibold uppercase">Read More</a>
-              </div>
-            </div>
+          <div class="card-body">
+            <h4 class="card-title">1 Card title</h4>
+            <p class="card-text text-center font-thin">    555 W Madison St,<br>
+              Chicago, IL 60661</p>
+              <p class="text-center pt-2 text-sm font-normal">
+                Studio - 2 Beds | $1,640 - $5,860
+              </p>
           </div>
-          <!-- Add more cards as needed -->
         </div>
       </div>
-    </div>
-  </div>
-  
+
+
+
+    <!-- <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <div class="col" style="width: 37vh;">
+          <div class="card">
+            <div class="card-img-top">
+              <img src="assets/images/regents-park-chicago-il-diningliving-room.jpg" class="card-img-top" alt="">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">1 Card title</h4>
+              <p class="card-text text-center font-thin">
+                555 W Madison St,<br>
+                Chicago, IL 60661
+              </p>
+              <p class="text-center pt-2 text-sm font-normal">
+                Studio - 2 Beds | $1,640 - $5,860
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    
