--- a/property-rental-app/src/app/page/card/card.component.html
+++ b/property-rental-app/src/app/page/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" routerLink="propertydetails">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-[]">
   
       <div class="col w-[37vh]">
