dev (fix): add cards dynamiclly

--- a/property-rental-app/src/app/page/home/home.component.html
+++ b/property-rental-app/src/app/page/home/home.component.html
@@ -9,10 +9,7 @@
   </section>
 <div class="pb-5">
   <h1  class="mb-4">Explore Rentals in Chicago, IL</h1>
-<div class="flex justify-center gap-4 ">
-  <app-card></app-card>
-  <app-card></app-card>
-  <app-card></app-card>
+<div>
   <app-card></app-card>
 </div>
 </div>
