--- a/property-rental-app/src/app/page/card/card.component.html
+++ b/property-rental-app/src/app/page/card/card.component.html
@@ -1,43 +1,39 @@
-<div class="container" routerLink="propertydetails">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-[]">
+<!-- <div class="container" routerLink="/propertydetails/"  >
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-[100vh]">
   
-      <div class="col w-[37vh]">
-        <div class="card">
+      <div class="col ">
+        <div class="card" *ngFor="let card of cardData">
           <div class="card-img-top">
-            <img src="assets/images/regents-park-chicago-il-diningliving-room.jpg" class="card-img-top" alt="">
+            <img [src]="card.imagepath" class="card-img-top" alt="">
           </div>
           <div class="card-body">
-            <h4 class="card-title">1 Card title</h4>
-            <p class="card-text text-center font-thin">    555 W Madison St,<br>
-              Chicago, IL 60661</p>
+            <h4 class="card-title">{{card.title}}</h4>
+            <p class="card-text text-center font-thin"> {{card.location}}</p>
               <p class="text-center pt-2 text-sm font-normal">
-                Studio - 2 Beds | $1,640 - $5,860
+             {{card.price}}
               </p>
           </div>
         </div>
       </div>
+    </div>
+</div> -->
 
 
-
-    <!-- <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-        <div class="col" style="width: 37vh;">
-          <div class="card">
-            <div class="card-img-top">
-              <img src="assets/images/regents-park-chicago-il-diningliving-room.jpg" class="card-img-top" alt="">
-            </div>
-            <div class="card-body">
-              <h4 class="card-title">1 Card title</h4>
-              <p class="card-text text-center font-thin">
-                555 W Madison St,<br>
-                Chicago, IL 60661
-              </p>
-              <p class="text-center pt-2 text-sm font-normal">
-                Studio - 2 Beds | $1,640 - $5,860
-              </p>
-            </div>
-          </div>
+<div class="container mx-auto">
+  <div class="flex flex-wrap justify-center gap-4">
+    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 p-4" *ngFor="let card of cardData">
+      <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="card-img-top h-48 w-full">
+          <img [src]="card.imagepath" class="h-full w-full object-cover" alt="">
+        </div>
+        <div class="card-body p-4">
+          <h4 class="card-title text-xl font-semibold mb-2">{{card.title}}</h4>
+          <p class="card-text text-center text-gray-600">{{card.location}}</p>
+          <p class="text-center pt-2 text-sm font-normal text-gray-800">
+            {{card.price}}
+          </p>
         </div>
       </div>
-    </div> -->
-    
+    </div>
+  </div>
+</div>
