dev (fix): add card details

--- a/property-rental-app/src/app/page/propertydetails/propertydetails.component.html
+++ b/property-rental-app/src/app/page/propertydetails/propertydetails.component.html
@@ -1,1 +1,51 @@
 <app-swiper></app-swiper>
+
+<section class="w-screen flex justify-center text-white pt-5">
+    <div class="left w-[90vh] ">
+        <h2 class="font-bold text-2xl">Presidential Towers</h2>
+        <p class="font-medium text-sm pt-0.5">555 W Madison St, Chicago, IL 60661</p>
+        <div class="container mx-auto border border-white mt-4 p-4">
+            <div class="flex flex-wrap justify-between text-white">
+              <div class="w-full sm:w-1/2 md:w-1/4 mb-2">
+                <p class="font-semibold">Monthly Rent</p>
+                <p>$1,640 - $5,860</p>
+              </div>
+              <div class="w-full sm:w-1/2 md:w-1/4 mb-2">
+                <p class="font-semibold">Bedrooms</p>
+                <p>Studio - 2 bd</p>
+              </div>
+              <div class="w-full sm:w-1/2 md:w-1/4 mb-2">
+                <p class="font-semibold">Bathrooms</p>
+                <p>1 - 2 ba</p>
+              </div>
+              <div class="w-full sm:w-1/2 md:w-1/4 mb-2">
+                <p class="font-semibold">Square Feet</p>
+                <p>471 - 1,101 sq ft</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="info pt-5">
+            <h2 class="font-semibold text-2xl">Pricing & Floor Plans</h2>
+            <div class="tab">
+   
+            </div>
+          </div>
+    </div>
+    <div class="right w-[50vh] bg-red-300">d</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
