--- a/property-rental-app/src/app/page/card/card.component.html
+++ b/property-rental-app/src/app/page/card/card.component.html
@@ -19,7 +19,7 @@
 </div> -->
 
 
-<div class="container mx-auto">
+<div class="container mx-auto " routerLink="/propertydetails">
   <div class="flex flex-wrap justify-center gap-4">
     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 p-4" *ngFor="let card of cardData">
       <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
