dev (fix): add forms and validations

--- a/property-rental-app/src/app/page/propertydetails/propertydetails.component.html
+++ b/property-rental-app/src/app/page/propertydetails/propertydetails.component.html
@@ -28,7 +28,12 @@
           <div class="info pt-5">
             <h2 class="font-semibold text-2xl">Pricing & Floor Plans</h2>
             <div class="tab">
-   
+              <div class="info pt-5 px-6 max-w-3xl mx-auto">
+                <div class="tab">
+             <app-tabs></app-tabs>
+             <app-propertdatainfo></app-propertdatainfo>
+                </div>
+              </div>
             </div>
           </div>
     </div>
