--- a/property-rental-app/src/app/page/forms/sendmessage/sendmessage.component.html
+++ b/property-rental-app/src/app/page/forms/sendmessage/sendmessage.component.html
@@ -1,1 +1,69 @@
-<p>sendmessage works!</p>
+<div class="modal fade" id="sendMessage" tabindex="-1" aria-labelledby="fileModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header bg-gray-100">
+          <h5 class="modal-title font-semibold text-gray-700" id="fileModalLabel">Appartmenrt name</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="bg-[#f2f2f2] p-6 rounded-lg shadow-lg">
+            <div>
+              <form action="">
+                <div class="flex gap-4 mb-4 text-black">
+                  <input type="text" placeholder="First name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                  <input type="text" placeholder="Last name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                </div>
+                <div class="mb-4">
+                  <input type="email" placeholder="Email Address" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                </div>
+                <div class="flex gap-4 mb-4">
+                  <div class="w-1/2 text-black">
+                    <p class="text-sm mb-1">Preferred date</p>
+                    <input type="date" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                  </div>
+                  <div class="w-1/2 text-black ">
+                    <p class="text-sm mb-1">Contact no</p>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                  </div>
+                </div>
+                <div class="mb-4 text-black">
+                  <p class="text-sm mb-2">I would like to...</p>
+                  <div class="flex flex-wrap gap-4">
+                    <label class="flex items-center space-x-2">
+                      <input type="checkbox" value="schedule a tour" class="form-checkbox text-green-600" />
+                      <span>Schedule a tour</span>
+                    </label>
+                    <label class="flex items-center space-x-2">
+                      <input type="checkbox" value="Request Application" class="form-checkbox text-green-600" />
+                      <span>Request Application</span>
+                    </label>
+                    <label class="flex items-center space-x-2">
+                      <input type="checkbox" value="Confirm availability" class="form-checkbox text-green-600" />
+                      <span>Confirm availability</span>
+                    </label>
+                    <label class="flex items-center space-x-2">
+                      <input type="checkbox" value="Custom Message" class="form-checkbox text-green-600" />
+                      <span>Custom Message</span>
+                    </label>
+                  </div>
+                </div>
+                <div class="text-center bg-slate-600 text-white py-2 rounded-md shadow-sm hover:bg-slate-700 transition duration-200">
+                  <button type="submit">Send Message</button>
+                </div>
+                <div class="text-xs mt-4 text-black">
+                  <label class="flex items-center space-x-2">
+                    <input type="checkbox" value="Email me listings and apartments related info" class="form-checkbox text-green-600" />
+                    <span>Email me listings and apartments related info</span>
+                  </label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer bg-gray-100">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
