--- a/property-rental-app/src/app/page/forms/sendmessage/sendmessage.component.html
+++ b/property-rental-app/src/app/page/forms/sendmessage/sendmessage.component.html
@@ -8,52 +8,65 @@
         <div class="modal-body">
           <div class="bg-[#f2f2f2] p-6 rounded-lg shadow-lg">
             <div>
-              <form action="">
+              <form action="" [formGroup]="requestTourForm" (ngSubmit)="onSubmit()">
                 <div class="flex gap-4 mb-4 text-black">
-                  <input type="text" placeholder="First name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
-                  <input type="text" placeholder="Last name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                  <input type="text" placeholder="First name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="firstName"/>
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('required')">
+                    First name is required
+                </span>
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('maxlength')">
+                    First name must be less than 20 characters
+                </span>
+                  <input type="text" placeholder="Last name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="lastName"/>
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('required')">
+                    Last name is required
+                </span>
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('maxlength')">
+                    Last name must be less than 20 characters
+                </span>
                 </div>
-                <div class="mb-4">
-                  <input type="email" placeholder="Email Address" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                <div class="mb-4 text-black" >
+                  <input type="email" placeholder="Email Address" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="email" />
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('required')">
+                    Email is required
+                </span>
+                  <span class="text-red-500" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('email')">
+                    Please enter a valid email address
+                </span>
                 </div>
                 <div class="flex gap-4 mb-4">
                   <div class="w-1/2 text-black">
                     <p class="text-sm mb-1">Preferred date</p>
-                    <input type="date" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                    <input type="date" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="tourDate" />
+                    <span class="text-red-500" *ngIf="requestTourForm.controls['tourDate'].touched && requestTourForm.controls['tourDate'].hasError('required')">
+                      Date is required
+                  </span>
                   </div>
                   <div class="w-1/2 text-black ">
                     <p class="text-sm mb-1">Contact no</p>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" />
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200"  formControlName="phoneNumber"/>
+                    <span class="text-red-500" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('required')">
+                      Phone number is required
+                  </span>
+                    <span class="text-red-500" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('pattern')">
+                      Please enter a valid phone number
+                  </span>
                   </div>
                 </div>
-                <div class="mb-4 text-black">
-                  <p class="text-sm mb-2">I would like to...</p>
-                  <div class="flex flex-wrap gap-4">
-                    <label class="flex items-center space-x-2">
-                      <input type="checkbox" value="schedule a tour" class="form-checkbox text-green-600" />
-                      <span>Schedule a tour</span>
-                    </label>
-                    <label class="flex items-center space-x-2">
-                      <input type="checkbox" value="Request Application" class="form-checkbox text-green-600" />
-                      <span>Request Application</span>
-                    </label>
-                    <label class="flex items-center space-x-2">
-                      <input type="checkbox" value="Confirm availability" class="form-checkbox text-green-600" />
-                      <span>Confirm availability</span>
-                    </label>
-                    <label class="flex items-center space-x-2">
-                      <input type="checkbox" value="Custom Message" class="form-checkbox text-green-600" />
-                      <span>Custom Message</span>
-                    </label>
+                  <div class="w-1/2 text-black ">
+                    <p class="text-sm mb-1">Custom Message</p>
+                  <textarea name="" id="" class="w-full"></textarea>
                   </div>
-                </div>
                 <div class="text-center bg-slate-600 text-white py-2 rounded-md shadow-sm hover:bg-slate-700 transition duration-200">
-                  <button type="submit">Send Message</button>
+                  <button type="submit" [disabled]="requestTourForm.invalid" (click)="onSubmit();reset()">Send Message</button>
                 </div>
                 <div class="text-xs mt-4 text-black">
                   <label class="flex items-center space-x-2">
-                    <input type="checkbox" value="Email me listings and apartments related info" class="form-checkbox text-green-600" />
+                    <input type="checkbox" value="Email me listings and apartments related info" class="form-checkbox text-green-600" formControlName="acceptTerms" />
                     <span>Email me listings and apartments related info</span>
+                    <span class="text-red-500" *ngIf="requestTourForm.controls['acceptTerms'].touched && requestTourForm.controls['acceptTerms'].hasError('required')">
+                      You must accept the terms and conditions
+                  </span>
                   </label>
                 </div>
               </form>
@@ -66,4 +79,5 @@
       </div>
     </div>
   </div>
-  
+
+
