dev(fix):add property card but not add dynamicly

--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -5,6 +5,10 @@
     </div>
     <div class="content">
         <app-property-cards></app-property-cards>
+        <!-- NOT working
+        <div class="apartment-list">
+            <app-property-cards *ngFor="let apartment of apartments" [apartment]="apartment"></app-property-cards>
+          </div> -->
     </div>
 </section>
 </div>
