dev(fix):add property card dynamicly

--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -1,14 +1,10 @@
 <div class="main">
-<section class="flex gap-4">
+<section class="">
     <div class="map">
         <app-map></app-map>
     </div>
     <div class="content">
-        <app-property-cards></app-property-cards>
-        <!-- NOT working
-        <div class="apartment-list">
-            <app-property-cards *ngFor="let apartment of apartments" [apartment]="apartment"></app-property-cards>
-          </div> -->
+       <app-show-property-cards></app-show-property-cards>
     </div>
 </section>
 </div>
