--- a/property-rental-main-app/src/app/components/map/map.component.html
+++ b/property-rental-main-app/src/app/components/map/map.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex ">
+<div class="d-flex relative">
     <div>
       <google-map
-              width="60vw"
-              height="70vh"
+              width="100vw"
+              height="100vh"
               [center]="center"
               [zoom]="zoom"
               (mapClick)="moveMap($event)"
