dev(fix):add subnavbar in propertymanview component

--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -1,9 +1,10 @@
-<div class="main">
+<div class="main ">
+    <app-sub-navbar></app-sub-navbar>
 <section class="">
     <div class="map">
         <app-map></app-map>
     </div>
-    <div class="content">
+    <div class="content ">
        <app-show-property-cards></app-show-property-cards>
     </div>
 </section>
