--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -7,22 +7,23 @@
     </div>
     <div class="side flex h-full">
         <div class="imgs w-1/2 h-full overflow-hidden">
-            <div  *ngIf="apartment.images.length"  id="carouselExampleControls" class="carousel slide h-full" data-bs-ride="carousel">
-                <div  class="carousel-inner h-full">
-                    <div  *ngFor="let image of apartment.images" class="carousel-item active h-full">
+            <div *ngIf="apartment.images.length" [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel">
+                <div class="carousel-inner h-full">
+                    <div *ngFor="let image of apartment.images; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
                         <img [src]="image" class="d-block w-full h-full object-cover" alt="...">
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                <a [attr.href]="'#carousel' + index" class="carousel-control-prev" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                <a [attr.href]="'#carousel' + index" class="carousel-control-next" role="button" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
         </div>
+        
         <div  class="details w-1/2 p-2 flex flex-col justify-center">
             <div class="card-body">
                 <p class="text-lg font-extrabold text-gray-800 ">{{ apartment.details.price}} </p>
