--- a/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
+++ b/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
@@ -1,3 +1,3 @@
-<div class="apartment-list flex flex-col gap-3 absolute top-16 right-0 bg-black p-4 rounded-lg overflow-x-auto">
-   <app-property-cards *ngFor="let apartment of apartments" [apartment]="apartment"></app-property-cards>
+<div class="apartment-list h-screen flex flex-col gap-3 absolute top-28 right-0 bg-black p-4 rounded-lg overflow-x-auto ">
+   <app-property-cards *ngFor="let apartment of apartments; let i = index" [apartment]="apartment" [index]="i"></app-property-cards>
 </div>
