--- a/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.html
+++ b/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.html
@@ -1,15 +1,39 @@
-<nav class="navbar navbar-light bg-slate-300 z-20 ">
+<nav class="navbar navbar-expand-lg navbar-light bg-light z-20">
   <div class="container-fluid">
-    <form class="d-flex input-group w-auto">
-      <input
-        type="search"
-        [(ngModel)]="searchText"
-        id="form1"
-        class="form-control"
-        placeholder="Search your property"
-        aria-label="search "
-      />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
+    <a class="navbar-brand" href="#">Brand</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Features
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Feature 1</a></li>
+            <li><a class="dropdown-item" href="#">Feature 2</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#">More Features</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Feature 3</a></li>
+                <li><a class="dropdown-item" href="#">Feature 4</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
   </div>
 </nav>
