fix(dev):change components name

--- a/property-rental-main-app/src/app/components/request-box/request-box.component.html
+++ b/property-rental-main-app/src/app/components/request-box/request-box.component.html
@@ -27,7 +27,7 @@
     </div>
   </aside>
 <app-request-tourform></app-request-tourform>
- <app-sendmessage></app-sendmessage>
+ <app-send-message></app-send-message>
 
 
 
