--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="w-[50vh] h-80 bg-gray-300 shadow-lg rounded-lg p-6 ">
-   <app-requestbox></app-requestbox>
+   <app-request-box></app-request-box>
   </div>
   
 </section>
