fix(dev):add property details component

--- a/property-rental-main-app/src/app/components/swiper/swiper.component.html
+++ b/property-rental-main-app/src/app/components/swiper/swiper.component.html
@@ -1,15 +1,13 @@
-
-
-<div id="carouselExampleControls" class="carousel slide bg-black  " data-bs-ride="carousel" style="height: 500px;">
+<div id="carouselExampleControls" class="carousel slide bg-black  " data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="image1.jpg" class="d-block w-100" alt="Image 1">
+      <img src="https://images1.apartments.com/i2/JPTQzO1hDzcPRmyqjSd7LOxt5Cd6u_fyyfnPiRTsvSo/111/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1" class="d-block w-100 " alt="Image 1">
     </div>
     <div class="carousel-item">
-      <img src="image2.jpg" class="d-block w-100" alt="Image 2">
+      <img src="https://images1.apartments.com/i2/MeTB4o9WGF_uk-qnlvyyuXX85bubpy79b2TQQWrcDnw/116/rivers-edge-apartments-waukesha-wi-primary-photo.jpg?p=1" class="d-block w-100" alt="Image 2">
     </div>
     <div class="carousel-item">
-      <img src="image3.jpg" class="d-block w-100" alt="Image 3">
+      <img src="https://images1.apartments.com/i2/cbRLIvIUrw1GElvngCA4OvtBX4QOPQweZrWvnUvuzOY/117/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1 " class="d-block w-100" alt="Image 3">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
