--- a/property-rental-main-app/src/app/components/request-box/request-box.component.html
+++ b/property-rental-main-app/src/app/components/request-box/request-box.component.html
@@ -5,7 +5,7 @@
       <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 w-full transition duration-300 ease-in-out" data-bs-toggle="modal" data-bs-target="#requestTour">
         Request Tour
       </button>
-      <button class="bg-gray-500 text-white py-2 px-4 rounded-lg hover:bg-gray-600 w-full transition duration-300 ease-in-out" data-bs-toggle="modal" data-bs-target="#">
+      <button class="bg-gray-500 text-white py-2 px-4 rounded-lg hover:bg-gray-600 w-full transition duration-300 ease-in-out" data-bs-toggle="modal" data-bs-target="#sendMessage">
         Send Message
       </button>
 
