fix(dev):add basic functionality

--- a/property-rental-main-app/src/app/components/search/search.component.html
+++ b/property-rental-main-app/src/app/components/search/search.component.html
@@ -7,6 +7,6 @@
       </g>
     </svg>
     <input placeholder="Search" type="search" class="input" />
-    <button>Search</button>
+    <button routerLink="/PropertyMapView">Search</button>
   </div>
   
