--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -13,7 +13,7 @@
             Tour This Floor Plan
           </button>
           <button type="button" class="text-blue-600 flex items-center gap-1 " >
-            <a routerLink="/propertyImgVid"> Floor Plan</a>
+            <a routerLink="/PropertyMediaView"> Floor Plan</a>
           </button>
           <button type="button" class="text-blue-600 flex items-center gap-1">
             <i class="fa-solid fa-cube"></i> Virtual Tour
@@ -105,6 +105,9 @@
       </div>
     </div>
   </div>
+
+
+  
   <div class="w-[40vh] h-80 bg-gray-300 shadow-lg rounded-lg p-6">
     <app-request-box></app-request-box>
   </div>
