--- a/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,7 @@
 <nav class="h-16 w-full bg-black">
+  
   <div class="container mx-auto h-full flex justify-center items-center space-x-8 text-white">
+
     <a 
       *ngFor="let nav of navbarData"
       href="#" 
@@ -9,8 +11,10 @@
       [routerLink]="nav.routerLink">
       {{nav.displayname}}
     </a>
+        <!-- Image Styling -->
+        <!-- <img src="assets/images/preview.png" alt="Preview" class="h-10 w-auto object-contain ml-4"> -->
   </div>
 </nav>
 
-  <app-login></app-login>
-  <app-signup></app-signup>
+<app-login></app-login>
+<app-signup></app-signup>
