--- a/property-rental-main-app/src/app/components/swiper/swiper.component.html
+++ b/property-rental-main-app/src/app/components/swiper/swiper.component.html
@@ -1,25 +1,25 @@
 <div class="side flex ">
-  <div class="imgs w-full h-[50vh] overflow-hidden"><div id="carouselExampleControls" class="carousel slide bg-black  " data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://images1.apartments.com/i2/JPTQzO1hDzcPRmyqjSd7LOxt5Cd6u_fyyfnPiRTsvSo/111/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1" class="d-block w-100 " alt="Image 1">
+  <div class="imgs w-full h-[50vh] overflow-hidden">
+    <div id="carouselExampleControls" class="carousel slide bg-black h-full" data-bs-ride="carousel">
+      <div class="carousel-inner h-full">
+        <div class="carousel-item active h-full">
+          <img src="https://images1.apartments.com/i2/JPTQzO1hDzcPRmyqjSd7LOxt5Cd6u_fyyfnPiRTsvSo/111/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1" class="d-block w-100 h-full object-cover" alt="Image 1">
+        </div>
+        <div class="carousel-item h-full">
+          <img src="https://images1.apartments.com/i2/MeTB4o9WGF_uk-qnlvyyuXX85bubpy79b2TQQWrcDnw/116/rivers-edge-apartments-waukesha-wi-primary-photo.jpg?p=1" class="d-block w-100 h-full object-cover" alt="Image 2">
+        </div>
+        <div class="carousel-item h-full">
+          <img src="https://images1.apartments.com/i2/cbRLIvIUrw1GElvngCA4OvtBX4QOPQweZrWvnUvuzOY/117/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1" class="d-block w-100 h-full object-cover" alt="Image 3">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="https://images1.apartments.com/i2/MeTB4o9WGF_uk-qnlvyyuXX85bubpy79b2TQQWrcDnw/116/rivers-edge-apartments-waukesha-wi-primary-photo.jpg?p=1" class="d-block w-100" alt="Image 2">
-      </div>
-      <div class="carousel-item">
-        <img src="https://images1.apartments.com/i2/cbRLIvIUrw1GElvngCA4OvtBX4QOPQweZrWvnUvuzOY/117/rivers-edge-apartments-waukesha-wi-building-photo.jpg?p=1 " class="d-block w-100" alt="Image 3">
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden ">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
-    
-    </div>
-    </div>
+</div>
