--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,29 +1,8 @@
-<!-- <div class="container" routerLink="/propertydetails/"  >
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-[100vh]">
-  
-      <div class="col ">
-        <div class="card" *ngFor="let card of cardData">
-          <div class="card-img-top">
-            <img [src]="card.imagepath" class="card-img-top" alt="">
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">{{card.title}}</h4>
-            <p class="card-text text-center font-thin"> {{card.location}}</p>
-              <p class="text-center pt-2 text-sm font-normal">
-             {{card.price}}
-              </p>
-          </div>
-        </div>
-      </div>
-    </div>
-</div> -->
-
-
-<div class="container mx-auto " routerLink="/propertydetails">
+<div class="container mx-auto " >
   <div class="flex flex-wrap justify-center gap-4">
     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 p-4" *ngFor="let card of cardData">
       <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
-        <div class="card-img-top h-48 w-full">
+        <div class="card-img-top h-48 w-full" routerLink="/propertydetails/{{card.id}}">
           <img [src]="card.imagepath" class="h-full w-full object-cover" alt="">
         </div>
         <div class="card-body p-4">
