--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -1,17 +1,33 @@
 
 <div class="card apartment-card border border-gray-300 rounded-lg overflow-hidden " style="width: 60vh; height: 30vh;" >
     
-    <div  *ngIf="apartment.title.isEnabled"class="title h-12 bg-gray-100 flex items-center px-4">
+    <div  class="title h-12 bg-gray-100 flex items-center px-4">
         <div>
-            <h2 class="m-0 text-lg text-gray-800">{{ apartment.title.heading}}</h2>
-            <p class="m-0 text-sm text-gray-500">{{apartment.title.address }}</p>
+            <h2 class="m-0 text-lg text-gray-800">{{ propertyCard.name}}</h2>
+            <p class="m-0 text-sm text-gray-500">{{propertyCard.location }}</p>
         </div>
     </div>
     <div class="side flex h-full">
         <div class="imgs w-1/2 h-full overflow-hidden">
-            <div *ngIf="apartment.images.length" [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel">
+            <!-- <div *ngIf="propertyCard.carouselImages.length" [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel" ">
                 <div class="carousel-inner h-full">
-                    <div *ngFor="let image of apartment.images; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
+                    <div *ngFor="let image of propertyCard; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
+                        <img [src]="image.carouselImages" class="d-block w-full h-full object-cover" alt="...">
+                    </div>
+                </div>
+                <a [attr.href]="'#carousel' + index" class="carousel-control-prev" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a [attr.href]="'#carousel' + index" class="carousel-control-next" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> -->
+
+            <div *ngIf="propertyCard.carouselImages.length"  [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel">
+                <div class="carousel-inner h-full">
+                    <div *ngFor="let image of propertyCard.carouselImages;let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
                         <img [src]="image" class="d-block w-full h-full object-cover" alt="...">
                     </div>
                 </div>
@@ -26,14 +42,14 @@
             </div>
         </div>
         
-        <div  class="details w-1/2 p-2 flex flex-col justify-center">
+
+        <div  class="details w-1/2 p-2 flex flex-col justify-center"  routerLink="/propertydetails/{{propertyCard.id}}">
             <div class="card-body">
-                <p class="text-lg font-extrabold text-gray-800 ">{{ apartment.details.price}} </p>
-                <p class="text-sm font-bold text-gray-500 pb-1">{{ apartment.details.size }}</p>
-                <p class="text-sm text-gray-500 pb-2">{{ apartment.details.area}}</p>
-                <p class="text-sm font-extralight text-gray-500 pb-4">{{apartment.details.amenities}}</p>
+                <p class="text-lg font-extrabold text-gray-800 ">{{ propertyCard.price}} </p>
+                <p class="text-sm font-bold text-gray-500 pb-1">{{ propertyCard.area }}</p>
+                <p class="text-sm font-extralight text-gray-500 pb-4">{{propertyCard.amenities}}</p>
                 <button class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-gray-600 w-full transition duration-300 ease-in-out" data-bs-toggle="modal" data-bs-target="#requestTour">
-                    {{ apartment.button.text }}
+                    {{ propertyCard.button.text }}
                 </button>
             </div>
         </div>
