--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -35,7 +35,7 @@
             <button type="button" class="border border-green-600 text-green-600 rounded-md px-4 py-2 hover:border-2 transition duration-300">
               Tour This Floor Plan
             </button>
-            <a routerLink="/PropertyMapView" class="text-blue-600 flex items-center gap-1 hover:text-blue-800 transition duration-300">
+            <a routerLink="/PropertyMediaView" class="text-blue-600 flex items-center gap-1 hover:text-blue-800 transition duration-300">
               Floor Plan
             </a>
             <button type="button" class="text-blue-600 flex items-center gap-1 hover:text-blue-800 transition duration-300">
